# REDItools3

./: .flake8  README.md  pyproject.toml
.github/workflows/: pylint.yml
REDItools3.egg-info/: PKG-INFO  SOURCES.txt
reditools/: __main__.py  alignment_file.py  alignment_manager.py  analyze.py  compiled_position.py  compiled_reads.py  config.json  config.py  file_utils.py  histogram.py  homopolymerics.py  index.py  manhattan.py  plotter.py  reditools.py  region.py  rtchecks.py  utils.py  visualize.py
test/: test_positions.bed
