[build-system]
 requires = ["setuptools>=68.2.2", "pysam>=0.22.0", "sortedcontainers>=2.4.0"]
 build-backend = "setuptools.build_meta"

[project]
name = "REDItools3"
version = "v3.1-alpha"
authors = [
  { name="Adam Handen", email="adam.handen@gmail.com" },
  { name="Ernesto Picardi" }
]
readme = "README.md"
dependencies = [
    "pysam>=0.22.0",
    "sortedcontainers>=2.4.0"
]
keywords = ["bioinformatics", "RNA", "editing"]
requires-python = ">=3.11.5"

[project.urls]
homepage = "https://github.com/BioinfoUNIBA/REDItools3"
repository = "https://github.com/BioinfoUNIBA/REDItools3"
issues = "https://github.com/BioinfoUNIBA/REDItools3/issues"
